@startuml
' drevops/phptui - component architecture.
' Packages group the src/ classes by what they do; arrows show the main
' dependencies.
' Regenerate every SVG with:  plantuml -tsvg docs/architecture/*.puml
!theme plain
skinparam backgroundColor white
skinparam defaultFontName Helvetica
skinparam shadowing false
skinparam componentStyle rectangle
title drevops/phptui - component architecture

package "Declaring" #F0F4C3 {
  [Tui]
  [Form]
  [PanelBuilder]
  [FieldBuilder]
}

package "Block - the one tree" #E3F2FD {
  interface BlockInterface
  [Panel]
  [Field]
  [Markup]
  [Breadcrumb]
  [Legend]
  [Actions]
  [Progress]
  [Tree]
  [Block\\Capability]
  [Block\\Element]
}

package "Arranging" #FFEBEE {
  [Screen]
  interface LayoutInterface
  [AbstractLayout]
  [GridLayout]
  [LayoutManager]
  [Region]
  [Sizing]
  [Furniture]
  interface ScrollCapableInterface
}

package "Driving" #FFF3E0 {
  [ScreenController]
  [KeyRouter]
  [ScreenRenderer]
  [Assembler]
  [KeyMap]
}

package "Terminal - the text machinery" #ECEFF1 {
  [Terminal]
  [Ansi]
  [Box]
  [Table]
  [Terminal\\Markup]
}

package "Collecting" #E8F5E9 {
  [Collector]
  [InputResolver]
  [Discovery]
  [Deriver]
  [Condition]
  [Answers]
  [SchemaGenerator]
  [SchemaValidator]
  [AgentHelp]
}

package "Behaviour" #F3E5F5 {
  [HandlerRegistry]
  [Context]
}

package "Theme" #ECEFF1 {
  interface ThemeInterface
  [AbstractTheme]
  [DefaultTheme]
  [Theme\\Capability]
  [Theme\\Override]
  [ThemeManager]
  [ThemeBuilder]
}

[Tui] --> [Form]
[Form] --> [PanelBuilder]
[PanelBuilder] --> [FieldBuilder]
[PanelBuilder] --> [Panel]
[FieldBuilder] --> [Field]

[Panel] --> BlockInterface
[Field] --> BlockInterface
[Markup] --> BlockInterface
[Breadcrumb] --> BlockInterface
[Legend] --> BlockInterface
[Actions] --> BlockInterface
[Progress] --> BlockInterface
BlockInterface --> [Block\\Capability]
BlockInterface --> [Block\\Element]

[Panel] --> LayoutInterface
[Screen] --> LayoutInterface
[AbstractLayout] --> LayoutInterface
[AbstractLayout] *-- [Region]
[AbstractLayout] --> [Furniture]
[GridLayout] --> [AbstractLayout]
[LayoutManager] --> LayoutInterface
[Region] --> BlockInterface
[Region] --> [Sizing]
[Region] --> ScrollCapableInterface
LayoutInterface --> ScrollCapableInterface

[Tui] --> [Collector]
[Tui] --> [ScreenController]
[Tui] --> [ThemeManager]
[Tui] --> [InputResolver]

[ScreenController] --> [Screen]
[ScreenController] --> [Assembler]
[ScreenController] --> [KeyRouter]
[ScreenController] --> [ScreenRenderer]
[ScreenController] --> [Collector]
[ScreenController] --> [KeyMap]
[ScreenController] --> [Terminal]
[Assembler] --> [LayoutManager]
[Assembler] --> [Furniture]
[KeyRouter] --> [Panel]
[ScreenRenderer] --> [Screen]
[ScreenRenderer] --> LayoutInterface
[ScreenRenderer] --> ThemeInterface
[ScreenRenderer] --> [Ansi]
[ScreenRenderer] --> [Box]

[Collector] --> [Tree]
[Collector] --> [Discovery]
[Collector] --> [Deriver]
[Collector] --> [Condition]
[Collector] --> [HandlerRegistry]
[Collector] --> [Context]
[Collector] --> [Answers]
[SchemaGenerator] --> [Tree]
[SchemaValidator] --> [Tree]
[AgentHelp] --> [Tree]
[Tree] --> [Panel]

[AbstractTheme] --> ThemeInterface
[AbstractTheme] --> [Block\\Element]
[DefaultTheme] --> [AbstractTheme]
[DefaultTheme] --> [Ansi]
[DefaultTheme] --> [Box]
[DefaultTheme] --> [Table]
[DefaultTheme] --> [Terminal\\Markup]
[DefaultTheme] --> [Theme\\Capability]
[Theme\\Capability] --> [Theme\\Override]
[ThemeManager] --> ThemeInterface
[ThemeBuilder] --> [Theme\\Override]
[Tui] --> [ThemeBuilder]
BlockInterface --> ThemeInterface
@enduml
